test/snapshots/config-syntax-error.txt
-- CONFIGURATION COMPILATION ERROR ---------------------------------------------

An error occurred while compiling your configuration for elm-review. I need your
configuration to compile in order to know how to analyze your files. Hopefully
the compiler error below will help you figure out how to fix it.

-- UNEXPECTED SQUARE BRACKET - /home/jeroen/dev/node-elm-review/test/config-syntax-error/src/ReviewConfig.elm

I ran into an unexpected square bracket:

21|     ]
        ^
This ] does not match up with an earlier open square bracket. Try deleting it?

